--- a/app/src/main/res/drawable/ic_family.xml
+++ b/app/src/main/res/drawable/ic_family.xml
@@ -1,64 +1,189 @@
-<vector android:height="24dp" android:viewportHeight="450"
-    android:viewportWidth="450" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#3B5998" android:pathData="M0,0h450v450h-450z"/>
-    <path android:fillColor="#E67E22" android:pathData="M172.4,170l5.3,1.4l24.5,13.7l9.8,23.7l18.8,-18.7l16.3,2.9l1.9,14.3l-29,11.2l-49,-16.4z"/>
-    <path android:fillColor="#95A5A6" android:pathData="M137.4,270.8l-17.5,0l-30.4,0l0,17.3l2.4,99.5l25.6,0l4.7,-86l5.1,-6.4l2.6,0l5.1,6.4l4.7,86l25.7,0l2.3,-99.5l0,-17.3z"/>
-    <path android:fillColor="#E67E22" android:pathData="M93.2,206.5l-7.4,-36.5l-4.3,3l-25.1,45.9l-3.8,9.6l5,38l17.9,-2.4l-0.5,-27.4z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M108.1,127l-2,-1.1l-1.8,0.6l0,9l5.8,5.5z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M149.2,127l2,-1.1l1.8,0.6l0,9l-5.9,5.5z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M106.1,113.1l28.3,-11l5.1,-6.4l6.6,7.3c0,0 4.8,12 4.8,12l-2.8,42.2l-19.4,5.4l-19.4,-4.9L106.1,113.1z"/>
-    <path android:fillColor="#C16800" android:pathData="M106.1,113.1l28.3,-11l5.1,-6.4l6.6,7.3c0,0 4.8,12 4.8,12l-1.4,15.5h-2.3l-1.6,-13.2l-34.2,3.8l-1.7,9.4h-2.1L106.1,113.1z"/>
-    <path android:fillColor="#A74D4B" android:pathData="M93.4,394.5h22.2c0,0 4.3,-9.7 -11.1,-12.1C104.4,382.5 91.4,383.2 93.4,394.5z"/>
-    <path android:fillColor="#A74D4B" android:pathData="M163.7,394.5h-22.2c0,0 -4.3,-9.7 11.1,-12.1C152.6,382.5 165.6,383.2 163.7,394.5z"/>
-    <path android:fillColor="#006DB5" android:pathData="M167.7,270.8l-30.3,0l-17.5,0l-30.4,0l0,1l78.2,-1z"/>
-    <path android:fillColor="#488C87" android:pathData="M186.7,169.6l-5.3,1.5l-24.5,13.6l-9.8,23.8l-18.8,-18.7l-16.3,2.9l-1.9,14.2l29,11.2l49.1,-16.3z"/>
-    <path android:fillColor="#A74D4B" android:pathData="M167.7,275.1l-78.2,0l-4.7,-105.1l29.9,0l13.9,4.8l13.6,-4.8l30.2,0z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M114.7,156.3l0,13.7l13.9,3.1l13.6,-3.1l0,-12.8z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M318.7,157.6l0,13.6l13.7,1.9l13.8,-1.9l0,-12.7z"/>
-    <path android:fillColor="#34495E" android:pathData="M341.2,270.9l-17.6,0l-30.3,0l0,17.3l2.3,99.5l25.7,0l4.7,-86l5.1,-6.4l2.6,0l5.1,6.4l4.7,86l25.7,0l2.3,-99.5l0,-17.3z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M311.8,127.1l-1.9,-1.1l-1.9,0.6l0,9l5.9,5.5z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M352.9,127l2,-1.1l1.8,0.5l0,9l-5.9,5.5z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M309.9,113.2l39.9,-10.1l4.8,12l-2.8,42.2l-19.4,5.4l-19.5,-4.9z"/>
-    <path android:fillColor="#4C300F" android:pathData="M309.9,113.2l17.6,-6.9l22.3,-3.2l4.8,12l-1.4,15.5l-2.3,0l-1.6,-13.2l-34.3,3.8l-1.7,9.4l-2.1,0z"/>
-    <path android:fillColor="#999999" android:pathData="M297.1,394.6h22.2c0,0 4.3,-9.7 -11.1,-12.1C308.2,382.6 295.2,383.3 297.1,394.6z"/>
-    <path android:fillColor="#999999" android:pathData="M367.5,394.6h-22.2c0,0 -4.3,-9.7 11.1,-12.1C356.4,382.6 369.4,383.3 367.5,394.6z"/>
-    <path android:fillColor="#006DB5" android:pathData="M371.5,270.9l-30.3,0l-17.6,0l-30.3,0l0,1l78.2,-0.9z"/>
-    <path android:fillColor="#95A5A6" android:pathData="M371.5,275.2l-78.2,0l-4.7,-105.1l22.6,0l21.6,4l20.8,-4l22.5,0z"/>
-    <path android:fillColor="#F0C419" android:pathData="M332.4,275.2l0,-102.1l-21.2,-3l16,105.1z"/>
-    <path android:fillColor="#F0C419" android:pathData="M332.4,275.2l0,-102.1l21.2,-3l-16,105.1z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M216.8,157.2l0,18.7l13.7,6.7l13.8,-3.9l0,-20.6z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M239.3,270.5l-17.6,0l-30.3,0l0,17.3l3.6,38.7l2.4,60.7l19.4,0l3.5,-60.7l3.8,-25.2l5.1,-6.4l2.6,0l5.1,6.4l4.6,25.2l2.5,60.7l20.1,-0.5l1.7,-60.2l3.8,-38.7l0,-17.3z"/>
-    <path android:fillColor="#287572" android:pathData="M239.3,270.5l-17.6,0l-30.3,0l0,17.3l0.9,38.7l30.4,0l1.4,-25.2l5.1,-6.4l2.6,0l5.1,6.4l1.4,25.2l30.4,0l0.9,-38.7l0,-17.3z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M210,126.7l-2,-1.1l-1.9,0.6l0,8.9l5.9,5.5z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M250.9,126.6l2.1,-1.1l1.8,0.5l0,9l-5.9,5.5z"/>
-    <path android:fillColor="#FFDDB0" android:pathData="M208,112.8l28.2,-11l16.5,12.9l-2.8,42.2l-19.4,5.4l-19.4,-4.9z"/>
-    <path android:fillColor="#F39C12" android:pathData="M208,112.8l13.3,-5.2l11.4,-11.9l11.6,8.8l8.4,10.2l-1.4,15.4l-2.3,0l-1.6,-13.1l-34.3,3.8l-1.7,9.3l-2.1,0z"/>
-    <path android:fillColor="#999999" android:pathData="M195.2,394.2h22.2c0,0 4.3,-9.7 -11.1,-12.1C206.3,382.1 193.3,382.9 195.2,394.2z"/>
-    <path android:fillColor="#999999" android:pathData="M265.6,394.2h-22.2c0,0 -4.3,-9.7 11.1,-12.1C254.5,382.1 267.5,382.9 265.6,394.2z"/>
-    <path android:fillColor="#006DB5" android:pathData="M269.6,270.5l-30.3,0l-17.6,0l-30.3,0l0,1l78.2,-1z"/>
-    <path android:fillColor="#63BCB8" android:pathData="M269.6,274.7h-78.2l-4.7,-105.1h22.6c0,0 15.6,5.6 21.2,5.6c5.7,0 21.2,-5.6 21.2,-5.6h22.5L269.6,274.7z"/>
-    <path android:fillColor="#E67E22" android:pathData="M128.6,173.1l-13.9,-3.1l13.8,17.5l13.7,-17.5z"/>
-    <path android:fillColor="#34495E" android:pathData="M176.4,201.6l-26.1,-26.6l4.9,-1.8l52.1,4.9l10.1,2.2l40.6,15.5l-9.5,22l-36.8,-14.3z"/>
-    <path android:fillColor="#EDC89A" android:pathData="M107.2,215.2l11.2,7.7l9.3,-10.4l6.1,-12.4l-10.5,-7.1z"/>
-    <path android:fillColor="#EDC89A" android:pathData="M78.1,203.8l-2,1l-0.6,1.8l7.4,5.1l7.9,-1.8z"/>
-    <path android:fillColor="#EDC89A" android:pathData="M101,169.7l0.2,-2.2l1.5,-1.2l7.4,5l1.3,8z"/>
-    <path android:fillColor="#EDC89A" android:pathData="M90.8,160.2l-25,17.3l-8.2,0.6l2.4,9.6l7.2,10.6l36.5,21.4l15.4,-13l6.8,-18.9z"/>
-    <path android:fillColor="#865D41" android:pathData="M90.8,160.2l-25,17.3l-8.2,0.6l2.4,9.6l7.2,10.6l13.7,7.5l1.2,-1.8l-10,-8.8l22.4,-26.2l8.7,3.8l1.2,-1.7z"/>
-    <path android:fillColor="#488C87" android:pathData="M271.4,179.3l-18.7,83l21.6,7.8l13.4,-58.4l0.9,-21.7l-3.1,-13.5l-11.2,-6.9z"/>
-    <path android:fillColor="#6A7A7A" android:pathData="M283.8,281.6l22,-0.6l-3.9,-105.7l-4.5,-5l-9.5,-0.6l-7.2,5l1.6,71.5z"/>
-    <path android:fillColor="#3EB6DB" android:pathData="M216.1,238.7l-6.4,19.4l-8.4,29.7l41.2,2.1l110.8,-2.7l-0.1,-24.4l-97.3,-4.1l-6.5,-2.8l0,-2.5l6.4,-4.9l37.6,-21.2l8.7,0.4l36.4,31.4l11.7,-22.8l-39.4,-38l-12.3,-4l-56.3,23.2l-17.4,0z"/>
-    <path android:fillColor="#A74D4B" android:pathData="M360.3,285.7l-0.1,-21.1c0,0 -9.7,-4 -12,10.6C348.2,275.3 349,287.6 360.3,285.7z"/>
-    <path android:fillColor="#34495E" android:pathData="M242.2,217.5l-40.9,70.3l-27.5,-6.7l-73.2,-34l12.7,-18.7l15.5,-15.7l8.3,-19.5l12.6,-18.6l62.4,37.9z"/>
-    <path android:fillColor="#ECF0F1" android:pathData="M127.7,212.5l-14.4,15.9l65.3,18.6z"/>
-    <path android:fillColor="#ECF0F1" android:pathData="M127.7,212.5l9.4,-19.2l41.5,53.7z"/>
-    <path android:fillColor="#34495E" android:pathData="M148.2,264.1l-86.3,6.4l-18.5,-17.2l23.3,-46.4l22.2,11.2l-12.8,25.5l38.5,-8.8z"/>
-    <path android:fillColor="#A74D4B" android:pathData="M338.5,259.1l10.2,3.2l15.1,-39.9c0,0 -13.6,-4.4 -13.6,13.9l-2.1,4.3L338.5,259.1z"/>
-    <path android:fillColor="#EDC89A" android:pathData="M174.5,285.7l4.5,-13.2l19.9,3l-8.9,15.5z"/>
-    <path android:fillColor="#EDC89A" android:pathData="M289.4,290l-1.7,-13.9l19.1,-6l-1.1,17.9z"/>
-    <path android:fillColor="#EDC89A" android:pathData="M52.6,270.5l0.4,-13.9l19.8,-3l-3.9,17.4z"/>
-    <path android:fillColor="#EDC89A" android:pathData="M268.2,292.7l-0.6,-13.9l-19.9,-2.7l4.2,17.4z"/>
-    <path android:fillColor="#EDC89A" android:pathData="M353.3,280.8l-4.4,13.2l-19.8,-2.8l8.7,-15.6z"/>
-    <path android:fillColor="#EDC89A" android:pathData="M144.1,270.2l-0.6,-13.9l-19.9,-2.7l4.2,17.4z"/>
-    <path android:fillColor="#EDC89A" android:pathData="M256.9,198.3l12.8,5.5l-4.4,19.5l-14.9,-10z"/>
-    <path android:fillColor="#6A7A7A" android:pathData="M356.7,281.8l-21.1,-6.7l33.2,-100.5l7.3,-4.5l7.6,3.1l4.8,14.3l-20.6,60.7z"/>
+<vector android:height="24dp"
+    android:viewportHeight="450"
+    android:viewportWidth="450"
+    android:width="24dp"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path
+        android:fillColor="#3B5998"
+        android:pathData="M0,0h450v450h-450z" />
+    <path
+        android:fillColor="#E67E22"
+        android:pathData="M172.4,170l5.3,1.4l24.5,13.7l9.8,23.7l18.8,-18.7l16.3,2.9l1.9,14.3l-29,11.2l-49,-16.4z" />
+    <path
+        android:fillColor="#95A5A6"
+        android:pathData="M137.4,270.8l-17.5,0l-30.4,0l0,17.3l2.4,99.5l25.6,0l4.7,-86l5.1,-6.4l2.6,0l5.1,6.4l4.7,86l25.7,0l2.3,-99.5l0,-17.3z" />
+    <path
+        android:fillColor="#E67E22"
+        android:pathData="M93.2,206.5l-7.4,-36.5l-4.3,3l-25.1,45.9l-3.8,9.6l5,38l17.9,-2.4l-0.5,-27.4z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M108.1,127l-2,-1.1l-1.8,0.6l0,9l5.8,5.5z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M149.2,127l2,-1.1l1.8,0.6l0,9l-5.9,5.5z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M106.1,113.1l28.3,-11l5.1,-6.4l6.6,7.3c0,0 4.8,12 4.8,12l-2.8,42.2l-19.4,5.4l-19.4,-4.9L106.1,113.1z" />
+    <path
+        android:fillColor="#C16800"
+        android:pathData="M106.1,113.1l28.3,-11l5.1,-6.4l6.6,7.3c0,0 4.8,12 4.8,12l-1.4,15.5h-2.3l-1.6,-13.2l-34.2,3.8l-1.7,9.4h-2.1L106.1,113.1z" />
+    <path
+        android:fillColor="#A74D4B"
+        android:pathData="M93.4,394.5h22.2c0,0 4.3,-9.7 -11.1,-12.1C104.4,382.5 91.4,383.2 93.4,394.5z" />
+    <path
+        android:fillColor="#A74D4B"
+        android:pathData="M163.7,394.5h-22.2c0,0 -4.3,-9.7 11.1,-12.1C152.6,382.5 165.6,383.2 163.7,394.5z" />
+    <path
+        android:fillColor="#006DB5"
+        android:pathData="M167.7,270.8l-30.3,0l-17.5,0l-30.4,0l0,1l78.2,-1z" />
+    <path
+        android:fillColor="#488C87"
+        android:pathData="M186.7,169.6l-5.3,1.5l-24.5,13.6l-9.8,23.8l-18.8,-18.7l-16.3,2.9l-1.9,14.2l29,11.2l49.1,-16.3z" />
+    <path
+        android:fillColor="#A74D4B"
+        android:pathData="M167.7,275.1l-78.2,0l-4.7,-105.1l29.9,0l13.9,4.8l13.6,-4.8l30.2,0z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M114.7,156.3l0,13.7l13.9,3.1l13.6,-3.1l0,-12.8z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M318.7,157.6l0,13.6l13.7,1.9l13.8,-1.9l0,-12.7z" />
+    <path
+        android:fillColor="#34495E"
+        android:pathData="M341.2,270.9l-17.6,0l-30.3,0l0,17.3l2.3,99.5l25.7,0l4.7,-86l5.1,-6.4l2.6,0l5.1,6.4l4.7,86l25.7,0l2.3,-99.5l0,-17.3z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M311.8,127.1l-1.9,-1.1l-1.9,0.6l0,9l5.9,5.5z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M352.9,127l2,-1.1l1.8,0.5l0,9l-5.9,5.5z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M309.9,113.2l39.9,-10.1l4.8,12l-2.8,42.2l-19.4,5.4l-19.5,-4.9z" />
+    <path
+        android:fillColor="#4C300F"
+        android:pathData="M309.9,113.2l17.6,-6.9l22.3,-3.2l4.8,12l-1.4,15.5l-2.3,0l-1.6,-13.2l-34.3,3.8l-1.7,9.4l-2.1,0z" />
+    <path
+        android:fillColor="#999999"
+        android:pathData="M297.1,394.6h22.2c0,0 4.3,-9.7 -11.1,-12.1C308.2,382.6 295.2,383.3 297.1,394.6z" />
+    <path
+        android:fillColor="#999999"
+        android:pathData="M367.5,394.6h-22.2c0,0 -4.3,-9.7 11.1,-12.1C356.4,382.6 369.4,383.3 367.5,394.6z" />
+    <path
+        android:fillColor="#006DB5"
+        android:pathData="M371.5,270.9l-30.3,0l-17.6,0l-30.3,0l0,1l78.2,-0.9z" />
+    <path
+        android:fillColor="#95A5A6"
+        android:pathData="M371.5,275.2l-78.2,0l-4.7,-105.1l22.6,0l21.6,4l20.8,-4l22.5,0z" />
+    <path
+        android:fillColor="#F0C419"
+        android:pathData="M332.4,275.2l0,-102.1l-21.2,-3l16,105.1z" />
+    <path
+        android:fillColor="#F0C419"
+        android:pathData="M332.4,275.2l0,-102.1l21.2,-3l-16,105.1z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M216.8,157.2l0,18.7l13.7,6.7l13.8,-3.9l0,-20.6z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M239.3,270.5l-17.6,0l-30.3,0l0,17.3l3.6,38.7l2.4,60.7l19.4,0l3.5,-60.7l3.8,-25.2l5.1,-6.4l2.6,0l5.1,6.4l4.6,25.2l2.5,60.7l20.1,-0.5l1.7,-60.2l3.8,-38.7l0,-17.3z" />
+    <path
+        android:fillColor="#287572"
+        android:pathData="M239.3,270.5l-17.6,0l-30.3,0l0,17.3l0.9,38.7l30.4,0l1.4,-25.2l5.1,-6.4l2.6,0l5.1,6.4l1.4,25.2l30.4,0l0.9,-38.7l0,-17.3z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M210,126.7l-2,-1.1l-1.9,0.6l0,8.9l5.9,5.5z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M250.9,126.6l2.1,-1.1l1.8,0.5l0,9l-5.9,5.5z" />
+    <path
+        android:fillColor="#FFDDB0"
+        android:pathData="M208,112.8l28.2,-11l16.5,12.9l-2.8,42.2l-19.4,5.4l-19.4,-4.9z" />
+    <path
+        android:fillColor="#F39C12"
+        android:pathData="M208,112.8l13.3,-5.2l11.4,-11.9l11.6,8.8l8.4,10.2l-1.4,15.4l-2.3,0l-1.6,-13.1l-34.3,3.8l-1.7,9.3l-2.1,0z" />
+    <path
+        android:fillColor="#999999"
+        android:pathData="M195.2,394.2h22.2c0,0 4.3,-9.7 -11.1,-12.1C206.3,382.1 193.3,382.9 195.2,394.2z" />
+    <path
+        android:fillColor="#999999"
+        android:pathData="M265.6,394.2h-22.2c0,0 -4.3,-9.7 11.1,-12.1C254.5,382.1 267.5,382.9 265.6,394.2z" />
+    <path
+        android:fillColor="#006DB5"
+        android:pathData="M269.6,270.5l-30.3,0l-17.6,0l-30.3,0l0,1l78.2,-1z" />
+    <path
+        android:fillColor="#63BCB8"
+        android:pathData="M269.6,274.7h-78.2l-4.7,-105.1h22.6c0,0 15.6,5.6 21.2,5.6c5.7,0 21.2,-5.6 21.2,-5.6h22.5L269.6,274.7z" />
+    <path
+        android:fillColor="#E67E22"
+        android:pathData="M128.6,173.1l-13.9,-3.1l13.8,17.5l13.7,-17.5z" />
+    <path
+        android:fillColor="#34495E"
+        android:pathData="M176.4,201.6l-26.1,-26.6l4.9,-1.8l52.1,4.9l10.1,2.2l40.6,15.5l-9.5,22l-36.8,-14.3z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M107.2,215.2l11.2,7.7l9.3,-10.4l6.1,-12.4l-10.5,-7.1z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M78.1,203.8l-2,1l-0.6,1.8l7.4,5.1l7.9,-1.8z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M101,169.7l0.2,-2.2l1.5,-1.2l7.4,5l1.3,8z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M90.8,160.2l-25,17.3l-8.2,0.6l2.4,9.6l7.2,10.6l36.5,21.4l15.4,-13l6.8,-18.9z" />
+    <path
+        android:fillColor="#865D41"
+        android:pathData="M90.8,160.2l-25,17.3l-8.2,0.6l2.4,9.6l7.2,10.6l13.7,7.5l1.2,-1.8l-10,-8.8l22.4,-26.2l8.7,3.8l1.2,-1.7z" />
+    <path
+        android:fillColor="#488C87"
+        android:pathData="M271.4,179.3l-18.7,83l21.6,7.8l13.4,-58.4l0.9,-21.7l-3.1,-13.5l-11.2,-6.9z" />
+    <path
+        android:fillColor="#6A7A7A"
+        android:pathData="M283.8,281.6l22,-0.6l-3.9,-105.7l-4.5,-5l-9.5,-0.6l-7.2,5l1.6,71.5z" />
+    <path
+        android:fillColor="#3EB6DB"
+        android:pathData="M216.1,238.7l-6.4,19.4l-8.4,29.7l41.2,2.1l110.8,-2.7l-0.1,-24.4l-97.3,-4.1l-6.5,-2.8l0,-2.5l6.4,-4.9l37.6,-21.2l8.7,0.4l36.4,31.4l11.7,-22.8l-39.4,-38l-12.3,-4l-56.3,23.2l-17.4,0z" />
+    <path
+        android:fillColor="#A74D4B"
+        android:pathData="M360.3,285.7l-0.1,-21.1c0,0 -9.7,-4 -12,10.6C348.2,275.3 349,287.6 360.3,285.7z" />
+    <path
+        android:fillColor="#34495E"
+        android:pathData="M242.2,217.5l-40.9,70.3l-27.5,-6.7l-73.2,-34l12.7,-18.7l15.5,-15.7l8.3,-19.5l12.6,-18.6l62.4,37.9z" />
+    <path
+        android:fillColor="#ECF0F1"
+        android:pathData="M127.7,212.5l-14.4,15.9l65.3,18.6z" />
+    <path
+        android:fillColor="#ECF0F1"
+        android:pathData="M127.7,212.5l9.4,-19.2l41.5,53.7z" />
+    <path
+        android:fillColor="#34495E"
+        android:pathData="M148.2,264.1l-86.3,6.4l-18.5,-17.2l23.3,-46.4l22.2,11.2l-12.8,25.5l38.5,-8.8z" />
+    <path
+        android:fillColor="#A74D4B"
+        android:pathData="M338.5,259.1l10.2,3.2l15.1,-39.9c0,0 -13.6,-4.4 -13.6,13.9l-2.1,4.3L338.5,259.1z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M174.5,285.7l4.5,-13.2l19.9,3l-8.9,15.5z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M289.4,290l-1.7,-13.9l19.1,-6l-1.1,17.9z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M52.6,270.5l0.4,-13.9l19.8,-3l-3.9,17.4z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M268.2,292.7l-0.6,-13.9l-19.9,-2.7l4.2,17.4z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M353.3,280.8l-4.4,13.2l-19.8,-2.8l8.7,-15.6z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M144.1,270.2l-0.6,-13.9l-19.9,-2.7l4.2,17.4z" />
+    <path
+        android:fillColor="#EDC89A"
+        android:pathData="M256.9,198.3l12.8,5.5l-4.4,19.5l-14.9,-10z" />
+    <path
+        android:fillColor="#6A7A7A"
+        android:pathData="M356.7,281.8l-21.1,-6.7l33.2,-100.5l7.3,-4.5l7.6,3.1l4.8,14.3l-20.6,60.7z" />
 </vector>
