--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -115,8 +115,7 @@
                         android:layout_height="wrap_content"
                         android:hint="@string/profile_new_username_hint"
                         android:inputType="textPersonName"
-                        android:singleLine="true"
-                        />
+                        android:singleLine="true" />
                 </android.support.design.widget.TextInputLayout>
 
                 <TextView
