--- a/app/src/main/res/menu/activity_i_tracked_drawer.xml
+++ b/app/src/main/res/menu/activity_i_tracked_drawer.xml
@@ -1,34 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:showIn="navigation_view">
     <group
         android:checkableBehavior="single"
         android:id="@+id/group0">
-    <item
-        android:id="@+id/menu_home"
-        android:title="Home"
-        android:icon="@drawable/home"/>
-    <item
-        android:id="@+id/menu_username"
-        android:title="Profile"
-        android:icon="@drawable/person"/>
-    <item
-        android:id="@+id/menu_family"
-        android:title="Family"
-        android:icon="@drawable/family_icon"/>
+        <item
+            android:id="@+id/menu_home"
+            android:title="Home"
+            android:icon="@drawable/home" />
+        <item
+            android:id="@+id/menu_username"
+            android:title="Profile"
+            android:icon="@drawable/person" />
+        <item
+            android:id="@+id/menu_family"
+            android:title="Family"
+            android:icon="@drawable/family_icon" />
 
     </group>
 
-    <group
-        android:id="@+id/group1">
+    <group android:id="@+id/group1">
         <item
             android:id="@+id/menu_logout"
             android:title="@string/main_menu_exit"
-            android:icon="@drawable/ic_exit_to_app_black_24dp"/>
+            android:icon="@drawable/ic_exit_to_app_black_24dp" />
     </group>
-
 
 
 </menu>
