--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -17,7 +17,10 @@
             android:id="@+id/profile_username_tab"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="8dp"
+            app:cardCornerRadius="4dp"
             app:cardElevation="4dp">
 
             <android.support.constraint.ConstraintLayout
@@ -65,7 +68,10 @@
             android:id="@+id/profile_group_tab"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="8dp"
+            app:cardCornerRadius="4dp"
             app:cardElevation="4dp">
 
             <android.support.constraint.ConstraintLayout
@@ -113,7 +119,10 @@
             android:id="@+id/profile_interval_tab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="8dp"
+            app:cardCornerRadius="4dp"
             app:cardElevation="4dp">
 
             <android.support.constraint.ConstraintLayout
@@ -174,7 +183,10 @@
             android:id="@+id/profile_tracking_switch_tab"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="8dp"
+            app:cardCornerRadius="4dp"
             app:cardElevation="4dp">
 
             <android.support.constraint.ConstraintLayout
@@ -235,7 +247,10 @@
             android:id="@+id/profile_history_max_tab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="8dp"
+            app:cardCornerRadius="4dp"
             app:cardElevation="4dp">
 
             <android.support.constraint.ConstraintLayout
@@ -307,7 +322,10 @@
             android:id="@+id/profile_delete_account_tab"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginRight="4dp"
             android:layout_marginBottom="8dp"
+            app:cardCornerRadius="4dp"
             app:cardElevation="4dp">
 
             <android.support.constraint.ConstraintLayout
